# lr-qdrant

./: Dockerfile.test  README.md  cmd.sh  config.yaml  docker-compose.yml  pyproject.toml
tests/: conftest.py  test_check_install.py  test_facet.py  test_filtering.py  test_inference.py  test_payload_index.py  test_points.py  test_prefetch.py  test_search.py  test_shards.py  test_update_payload.py  test_vector.py
